before migrate to androidxd

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Movie App</string>
+    <string name="title">Title:</string>
+    <string name="genre">Genre:</string>
+    <string name="year">Year:</string>
+    <string name="hint_search">Search a movie</string>
+    <string name="search">Search</string>
 </resources>
